stage/violin-home-deployment-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-home
  namespace: stage
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: violin-home
        image: ccr.ccs.tencentyun.com/violin/violin-home:v1.00
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: localtime
            mountPath: /etc/localtime
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
