stage/violin-home-service-stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-dev
  namespace: stage
spec:
  selector:
    app: nginx
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
