stage/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: violin-ingress
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: nginx-service-dev
      port:
        number: 80
  tls:
  - hosts:
    - www.violin-home.cn
    secretName: https-secret
  rules:
  - host: "www.violin-home.cn"
    http:
      paths:
      - path: /assets
        pathType: Prefix
        backend:
          service:
            name: nginx-service-dev
            port:
              number: 80
      - path: /write
        pathType: Prefix
        backend:
          service:
            name: nginx-service-dev
            port:
              number: 80
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: nginx-service-dev
            port:
              number: 80
      - path: /view
        pathType: Prefix
        backend:
          service:
            name: nginx-service-dev
            port:
              number: 80
      - path: /auth/api/v1
        pathType: Prefix
        backend:
          service:
            name: violin-book-service-dev
            port:
              number: 80
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: service-jenkins
            port:
              number: 80
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: violin-docs-service-dev
            port:
              number: 80
      - path: /argo-cd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
